# Botev

./: .gitignore  BOTEV_Documentation.docx  Botev.sln  CMakeLists.txt  README.md
Main.cpp/: Main.cpp.vcxproj  Main.cpp.vcxproj.filters
Main.cpp/x64/Debug/: Botev.exe.recipe  Botev.ilk  vc143.idb
Main.cpp/x64/Debug/Botev.tlog/: Botev.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/: products.txt
include/: data.h  logic.h  presentation.h  ui.h
src/: data.cpp  logic.cpp  main.cpp  presentation.cpp  ui.cpp
